[gd_scene load_steps=8 format=3 uid="uid://evqx0cha6p74"]

[ext_resource type="Texture2D" uid="uid://huotg5f43co8" path="res://magic1.png" id="1_kk418"]
[ext_resource type="Script" uid="uid://yu6y4lufima5" path="res://magic_ball.gd" id="1_wnie3"]
[ext_resource type="Texture2D" uid="uid://8gttmj7p327f" path="res://magic2.png" id="2_wnie3"]
[ext_resource type="Texture2D" uid="uid://cuqevbvhx86ot" path="res://magic3.png" id="3_80vwh"]
[ext_resource type="Texture2D" uid="uid://citiy58i55cc" path="res://magic4.png" id="4_s0wn4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_va45k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kk418")
}, {
"duration": 1.0,
"texture": ExtResource("2_wnie3")
}, {
"duration": 1.0,
"texture": ExtResource("3_80vwh")
}, {
"duration": 1.0,
"texture": ExtResource("4_s0wn4")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_80vwh"]

[node name="MagicBall" type="Node3D"]
script = ExtResource("1_wnie3")

[node name="Sprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
billboard = 1
double_sided = false
alpha_cut = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_va45k")
frame_progress = 0.317346

[node name="HurtBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("SphereShape3D_80vwh")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
